grouping management page almost done
